pom test