@@ -30,7 +30,7 @@
         <logback.logstash.version>6.1</logback.logstash.version>
         <nv.version>1.26</nv.version>
         <pdfbox.version>2.0.16</pdfbox.version>
-        <aws.version>1.11.622</aws.version>
+        <aws.version>1.11.623</aws.version>
         <simpleclient.version>0.6.0</simpleclient.version>
     </properties>
     <dependencyManagement>
@@ -211,6 +211,31 @@
     </dependencies>
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <configuration>
+                    <argLine>
+                        --illegal-access=permit
+                    </argLine>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>versions-maven-plugin</artifactId>
+                <configuration>
+                    <generateBackupPoms>false</generateBackupPoms>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
